--- a/apps/extension/manifest.json
+++ b/apps/extension/manifest.json
@@ -8,7 +8,8 @@
         "storage",
         "activeTab",
         "tabs",
-        "contextMenus"
+        "contextMenus",
+        "nativeMessaging"
     ],
     "host_permissions": [
         "<all_urls>"
