build: Fix NPM workspace protocol compatibility by replacing workspace:* with *

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -14,8 +14,8 @@
         "type-check": "tsc --noEmit"
     },
     "dependencies": {
-        "@passkeyper/core": "workspace:*",
-        "@passkeyper/storage": "workspace:*",
+        "@passkeyper/core": "*",
+        "@passkeyper/storage": "*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.0",
