--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -11,7 +11,7 @@
         "package": "npm run build && node scripts/package.js"
     },
     "dependencies": {
-        "@passkeyper/core": "workspace:*",
+        "@passkeyper/core": "*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "webextension-polyfill": "^0.10.0",
