--- a/services/api/package.json
+++ b/services/api/package.json
@@ -14,7 +14,7 @@
         "type-check": "tsc --noEmit"
     },
     "dependencies": {
-        "@passkeyper/core": "workspace:*",
+        "@passkeyper/core": "*",
         "express": "^4.18.2",
         "cors": "^2.8.5",
         "helmet": "^7.1.0",
