--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,9 +15,11 @@
         "@passkeyper/totp": "*",
         "@passkeyper/sync": "*",
         "@react-native-async-storage/async-storage": "^1.21.0",
+        "@react-native-community/slider": "^4.5.0",
         "@react-navigation/native": "^6.1.9",
         "@react-navigation/stack": "^6.3.20",
         "expo": "~50.0.0",
+        "expo-clipboard": "~5.0.0",
         "expo-local-authentication": "~14.0.0",
         "expo-secure-store": "~13.0.0",
         "expo-status-bar": "~1.11.1",
