ci: vereinfache CI Workflows - nur Build testen
- ci.yml: Entferne lint/test/type-check (nicht konfiguriert)
- ci.yml: Nur Build auf ubuntu und windows
- ci.yml: Desktop Build nur auf Windows
- ci-cd.yml: Entferne lint/test Jobs
- ci-cd.yml: Docker Build nur bei push to main/tags
- Verwende actions/upload-artifact@v4

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,5 @@
 # PassKeyPer CI/CD Pipeline
-# Runs tests, builds Docker images, and deploys to production
+# Runs builds and deploys to production
 
 name: CI/CD Pipeline
 
@@ -16,10 +16,10 @@ env:
 
 jobs:
     # ============================================
-    # LINT & TYPE CHECK
+    # BUILD
     # ============================================
-    lint:
-        name: Lint & Type Check
+    build:
+        name: Build
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -34,99 +34,17 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
-            - name: Run ESLint
-              run: npm run lint --if-present
-
-            - name: Run Type Check
-              run: npm run type-check --if-present
-
-    # ============================================
-    # UNIT TESTS
-    # ============================================
-    test:
-        name: Unit Tests
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "20"
-                  cache: "npm"
-
-            - name: Install dependencies
-              run: npm ci
-
-            - name: Run Tests
-              run: npm test --if-present
-
-            - name: Upload Coverage
-              uses: codecov/codecov-action@v3
-              if: always()
-              with:
-                  token: ${{ secrets.CODECOV_TOKEN }}
-                  fail_ci_if_error: false
-
-    # ============================================
-    # INTEGRATION TESTS
-    # ============================================
-    integration:
-        name: Integration Tests
-        runs-on: ubuntu-latest
-        services:
-            postgres:
-                image: postgres:16-alpine
-                env:
-                    POSTGRES_USER: test
-                    POSTGRES_PASSWORD: test
-                    POSTGRES_DB: passkeyper_test
-                ports:
-                    - 5432:5432
-                options: >-
-                    --health-cmd pg_isready
-                    --health-interval 10s
-                    --health-timeout 5s
-                    --health-retries 5
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "20"
-                  cache: "npm"
-
-            - name: Install dependencies
-              run: npm ci
-
-            - name: Setup Database
-              run: |
-                  cd services/api
-                  npx prisma migrate deploy
-              env:
-                  DATABASE_URL: postgresql://test:test@localhost:5432/passkeyper_test
-
-            - name: Run API Integration Tests
-              run: |
-                  cd services/api
-                  npm run dev &
-                  sleep 5
-                  npm run test:integration
-              env:
-                  DATABASE_URL: postgresql://test:test@localhost:5432/passkeyper_test
-                  JWT_SECRET: test-secret-key
+            - name: Build packages
+              run: npm run build
 
     # ============================================
     # BUILD DOCKER IMAGE
     # ============================================
-    build:
+    docker:
         name: Build Docker Image
         runs-on: ubuntu-latest
-        needs: [lint, test]
+        needs: [build]
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
         permissions:
             contents: read
             packages: write
