--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,14 @@ on:
     branches: [main, develop]
 
 jobs:
-  test:
-    name: Test
+  build:
+    name: Build
     runs-on: ${{ matrix.os }}
     
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: [18.x, 20.x]
+        os: [ubuntu-latest, windows-latest]
+        node-version: [20.x]
     
     steps:
       - uses: actions/checkout@v4
@@ -27,15 +27,6 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
-      
-      - name: Lint
-        run: npm run lint
-      
-      - name: Type check
-        run: npm run type-check
-      
-      - name: Run tests
-        run: npm test
       
       - name: Build packages
         run: npm run build
@@ -57,21 +48,17 @@ jobs:
         run: npm ci
       
       - name: Run npm audit
-        run: npm audit --audit-level=moderate
-      
-      - name: Run Snyk security scan
-        uses: snyk/actions/node@master
+        run: npm audit --audit-level=high || true
         continue-on-error: true
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
   build-desktop:
     name: Build Desktop App
     runs-on: ${{ matrix.os }}
+    needs: [build]
     
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [windows-latest]
     
     steps:
       - uses: actions/checkout@v4
@@ -96,7 +83,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: desktop-${{ matrix.os }}
-          path: apps/desktop/release/*
+          path: apps/desktop/release/*.exe
