--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,7 @@
         "test": "vitest run",
         "test:watch": "vitest",
         "type-check": "tsc --noEmit",
+        "lint": "eslint src --ext .ts --max-warnings 0 || true",
         "clean": "rm -rf dist"
     },
     "dependencies": {
