--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -92,7 +92,7 @@ jobs:
     deploy-staging:
         name: Deploy to Staging
         runs-on: ubuntu-latest
-        needs: [build, integration]
+        needs: [build]
         if: github.ref == 'refs/heads/develop'
         environment: staging
 
@@ -110,7 +110,7 @@ jobs:
     deploy-production:
         name: Deploy to Production
         runs-on: ubuntu-latest
-        needs: [build, integration]
+        needs: [build]
         if: startsWith(github.ref, 'refs/tags/v')
         environment: production
 
