--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -7,8 +7,8 @@
     "license": "AGPL-3.0",
     "scripts": {
         "dev": "vite",
-        "build": "vite build && electron-builder",
-        "build:strict": "tsc && vite build && electron-builder",
+        "build": "vite build",
+        "build:strict": "tsc && vite build",
         "preview": "vite preview",
         "electron:dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
         "electron:build": "vite build && electron-builder",
